# execsnoop

./: Cargo.toml  LICENSE  README.md
execsnoop/: Cargo.toml
execsnoop-common/: Cargo.toml
execsnoop-common/src/: bool.rs  lib.rs
execsnoop-ebpf/: Cargo.toml
execsnoop-ebpf/src/: main.rs  vmlinux.rs
execsnoop/src/: args.rs  init.rs  main.rs  print.rs
xtask/src/: build_ebpf.rs  run.rs
