[package]
name = "execsnoop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
execsnoop-common = { path = "../execsnoop-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
tokio = { version = "1.25", features = ["macros", "rt", "signal"] }
clap = { version = "4.5.1", features = ["derive"] }
time = { version = "0.3.34", features = ["local-offset", "formatting", "macros"] }
bytes = "1.5.0"

[[bin]]
name = "execsnoop"
path = "src/main.rs"
